THF-230: Node, paragraph, block and editor configs.

--- a/conf/cmi/block.block.pagetitle.yml
+++ b/conf/cmi/block.block.pagetitle.yml
@@ -6,7 +6,7 @@ dependencies:
     - hdbt_admin
 id: pagetitle
 theme: hdbt_admin
-region: header
+region: content
 weight: -3
 provider: null
 plugin: page_title_block
