--- a/conf/cmi/core.entity_form_display.node.page.default.yml
+++ b/conf/cmi/core.entity_form_display.node.page.default.yml
@@ -11,11 +11,9 @@ dependencies:
     - field.field.node.page.field_lower_content
     - field.field.node.page.field_metatags
     - field.field.node.page.field_page_content
-    - field.field.node.page.field_page_width
     - field.field.node.page.field_sidebar_content
     - node.type.page
   module:
-    - media_library
     - metatag
     - paragraphs
     - path
@@ -29,13 +27,13 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_content:
     type: paragraphs
-    weight: 14
+    weight: 13
     region: content
     settings:
       title: Paragraph
@@ -80,22 +78,15 @@ content:
     third_party_settings: {  }
   field_lead_in:
     type: string_textarea
-    weight: 13
+    weight: 12
     region: content
     settings:
       rows: 3
       placeholder: ''
     third_party_settings: {  }
-  field_liftup_image:
-    type: media_library_widget
-    weight: 4
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_lower_content:
     type: paragraphs
-    weight: 20
+    weight: 19
     region: content
     settings:
       title: Paragraph
@@ -114,14 +105,15 @@ content:
     third_party_settings: {  }
   field_metatags:
     type: metatag_firehose
-    weight: 5
+    weight: 4
     region: content
     settings:
       sidebar: false
+      use_details: true
     third_party_settings: {  }
   field_sidebar_content:
     type: paragraphs
-    weight: 15
+    weight: 14
     region: content
     settings:
       title: Paragraph
@@ -147,38 +139,38 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 9
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 17
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 16
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 12
+    weight: 11
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 10
+    weight: 9
     region: content
     settings:
       display_label: true
@@ -192,13 +184,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -208,15 +200,15 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 18
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 19
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_liftup_image: true
   field_page_content: true
-  field_page_width: true
