--- a/conf/cmi/core.entity_view_display.paragraph.text.default.yml
+++ b/conf/cmi/core.entity_view_display.paragraph.text.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.text.field_text
-    - field.field.paragraph.text.field_text_demo
     - paragraphs.paragraphs_type.text
   module:
     - text
@@ -22,5 +21,4 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-hidden:
-  field_text_demo: true
+hidden: {  }
