THF-230: Node field and paragraph configs. Disable helfi toc module.

--- a/conf/cmi/core.entity_form_display.paragraph.columns.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.columns.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.paragraph.columns.field_columns_title
     - paragraphs.paragraphs_type.columns
   module:
-    - hdbt_admin_editorial
     - paragraphs
 _core:
   default_config_hash: UdB9StYRd1ami-k28GJOyZFqzuZGdc6LZ7CHyx4rNYg
@@ -18,15 +17,9 @@ targetEntityType: paragraph
 bundle: columns
 mode: default
 content:
-  field_columns_design:
-    type: design_field_widget
-    weight: 1
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_columns_left_column:
     type: paragraphs
-    weight: 2
+    weight: 1
     region: content
     settings:
       title: Paragraph
@@ -45,7 +38,7 @@ content:
     third_party_settings: {  }
   field_columns_right_column:
     type: paragraphs
-    weight: 3
+    weight: 2
     region: content
     settings:
       title: Paragraph
@@ -72,4 +65,5 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_columns_design: true
   status: true
