--- a/conf/cmi/core.entity_form_display.paragraph.accordion_item.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.accordion_item.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - paragraphs.paragraphs_type.accordion_item
   module:
     - paragraphs
-    - select2_icon
 _core:
   default_config_hash: xQxl3DJdyXGfIMoF68zkvPXCgW-oWKdsAFKm2mhn7PM
 id: paragraph.accordion_item.default
@@ -19,7 +18,7 @@ mode: default
 content:
   field_accordion_item_content:
     type: paragraphs
-    weight: 2
+    weight: 1
     region: content
     settings:
       title: Paragraph
@@ -44,12 +43,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_icon:
-    type: select2_icon_widget
-    weight: 1
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   created: true
+  field_icon: true
   status: true
