--- a/conf/cmi/field.field.node.event.field_page_width.yml
+++ b/conf/cmi/field.field.node.event.field_page_width.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_page_width
     - node.type.event
-    - taxonomy.vocabulary.paragraph_width
   content:
     - 'taxonomy_term:paragraph_width:97d9a1a2-691c-49d1-a4ff-852549e845e0'
 id: node.event.field_page_width
@@ -23,8 +22,7 @@ default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
-    target_bundles:
-      paragraph_width: paragraph_width
+    target_bundles: {  }
     sort:
       field: name
       direction: asc
