--- a/conf/cmi/field.field.node.landing_page.field_content.yml
+++ b/conf/cmi/field.field.node.landing_page.field_content.yml
@@ -8,13 +8,9 @@ dependencies:
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
     - paragraphs.paragraphs_type.content_cards
-    - paragraphs.paragraphs_type.content_liftup
-    - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.liftup_with_image
     - paragraphs.paragraphs_type.list_of_links
     - paragraphs.paragraphs_type.remote_video
-    - paragraphs.paragraphs_type.service_list
-    - paragraphs.paragraphs_type.unit_search
   module:
     - entity_reference_revisions
 _core:
@@ -33,16 +29,12 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
+      content_cards: content_cards
       columns: columns
       banner: banner
       list_of_links: list_of_links
       liftup_with_image: liftup_with_image
-      content_cards: content_cards
-      content_liftup: content_liftup
-      from_library: from_library
       remote_video: remote_video
-      service_list: service_list
-      unit_search: unit_search
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -54,6 +46,15 @@ settings:
       banner:
         weight: -26
         enabled: true
+      blog_list:
+        weight: 40
+        enabled: false
+      card:
+        weight: 41
+        enabled: false
+      card_list:
+        weight: 42
+        enabled: false
       columns:
         weight: -27
         enabled: true
@@ -62,10 +63,13 @@ settings:
         enabled: true
       content_liftup:
         weight: -32
-        enabled: true
+        enabled: false
+      events_list:
+        weight: 46
+        enabled: false
       from_library:
         weight: 21
-        enabled: true
+        enabled: false
       gallery:
         weight: -20
         enabled: false
@@ -75,28 +79,70 @@ settings:
       hero:
         weight: -18
         enabled: false
+      highlighted_text:
+        weight: 51
+        enabled: false
       image:
         weight: -17
+        enabled: false
+      image_and_card:
+        weight: 53
+        enabled: false
+      info:
+        weight: 54
+        enabled: false
+      lead:
+        weight: 55
         enabled: false
       liftup_with_image:
         weight: -24
         enabled: true
+      link:
+        weight: 57
+        enabled: false
+      link_internal:
+        weight: 58
+        enabled: false
       list_of_links:
         weight: -25
         enabled: true
       list_of_links_item:
         weight: -16
         enabled: false
+      mainheading:
+        weight: 61
+        enabled: false
+      news_list:
+        weight: 62
+        enabled: false
+      phone_number_box:
+        weight: 63
+        enabled: false
       remote_video:
         weight: 27
         enabled: true
+      search:
+        weight: 65
+        enabled: false
       service_list:
         weight: 36
-        enabled: true
+        enabled: false
+      sidebar_text:
+        weight: 67
+        enabled: false
+      subheading:
+        weight: 68
+        enabled: false
+      sujo_embedded:
+        weight: 69
+        enabled: false
       text:
         weight: -15
         enabled: false
       unit_search:
         weight: 28
-        enabled: true
+        enabled: false
+      video:
+        weight: 72
+        enabled: false
 field_type: entity_reference_revisions
