--- a/conf/cmi/field.field.node.page.field_lower_content.yml
+++ b/conf/cmi/field.field.node.page.field_lower_content.yml
@@ -9,14 +9,10 @@ dependencies:
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
     - paragraphs.paragraphs_type.content_cards
-    - paragraphs.paragraphs_type.content_liftup
-    - paragraphs.paragraphs_type.from_library
-    - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.list_of_links
     - paragraphs.paragraphs_type.remote_video
     - paragraphs.paragraphs_type.text
-    - paragraphs.paragraphs_type.unit_search
   module:
     - entity_reference_revisions
 _core:
@@ -39,14 +35,10 @@ settings:
       columns: columns
       accordion: accordion
       image: image
-      gallery: gallery
       list_of_links: list_of_links
       content_cards: content_cards
-      content_liftup: content_liftup
       banner: banner
-      from_library: from_library
       remote_video: remote_video
-      unit_search: unit_search
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -58,6 +50,15 @@ settings:
       banner:
         weight: -21
         enabled: true
+      blog_list:
+        weight: 40
+        enabled: false
+      card:
+        weight: 41
+        enabled: false
+      card_list:
+        weight: 42
+        enabled: false
       columns:
         weight: -28
         enabled: true
@@ -66,24 +67,45 @@ settings:
         enabled: true
       content_liftup:
         weight: -22
-        enabled: true
+        enabled: false
+      events_list:
+        weight: 46
+        enabled: false
       from_library:
         weight: 21
-        enabled: true
+        enabled: false
       gallery:
         weight: -25
-        enabled: true
+        enabled: false
       gallery_slide:
         weight: -20
         enabled: false
       hero:
         weight: -19
         enabled: false
+      highlighted_text:
+        weight: 51
+        enabled: false
       image:
         weight: -26
         enabled: true
+      image_and_card:
+        weight: 53
+        enabled: false
+      info:
+        weight: 54
+        enabled: false
+      lead:
+        weight: 55
+        enabled: false
       liftup_with_image:
         weight: -18
+        enabled: false
+      link:
+        weight: 57
+        enabled: false
+      link_internal:
+        weight: 58
         enabled: false
       list_of_links:
         weight: -24
@@ -91,13 +113,40 @@ settings:
       list_of_links_item:
         weight: -17
         enabled: false
+      mainheading:
+        weight: 61
+        enabled: false
+      news_list:
+        weight: 62
+        enabled: false
+      phone_number_box:
+        weight: 63
+        enabled: false
       remote_video:
         weight: 32
         enabled: true
+      search:
+        weight: 65
+        enabled: false
+      service_list:
+        weight: 66
+        enabled: false
+      sidebar_text:
+        weight: 67
+        enabled: false
+      subheading:
+        weight: 68
+        enabled: false
+      sujo_embedded:
+        weight: 69
+        enabled: false
       text:
         weight: -29
         enabled: true
       unit_search:
         weight: -16
-        enabled: true
+        enabled: false
+      video:
+        weight: 72
+        enabled: false
 field_type: entity_reference_revisions
