--- a/conf/cmi/field.field.node.page.field_sidebar_content.yml
+++ b/conf/cmi/field.field.node.page.field_sidebar_content.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_sidebar_content
     - node.type.page
-    - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.sidebar_text
   module:
     - entity_reference_revisions
@@ -26,7 +25,6 @@ settings:
   handler_settings:
     target_bundles:
       sidebar_text: sidebar_text
-      from_library: from_library
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -38,6 +36,15 @@ settings:
       banner:
         weight: -37
         enabled: false
+      blog_list:
+        weight: 40
+        enabled: false
+      card:
+        weight: 41
+        enabled: false
+      card_list:
+        weight: 42
+        enabled: false
       columns:
         weight: -36
         enabled: false
@@ -47,9 +54,12 @@ settings:
       content_liftup:
         weight: -34
         enabled: false
+      events_list:
+        weight: 46
+        enabled: false
       from_library:
         weight: -32
-        enabled: true
+        enabled: false
       gallery:
         weight: -31
         enabled: false
@@ -59,11 +69,29 @@ settings:
       hero:
         weight: -29
         enabled: false
+      highlighted_text:
+        weight: 51
+        enabled: false
       image:
         weight: -28
         enabled: false
+      image_and_card:
+        weight: 53
+        enabled: false
+      info:
+        weight: 54
+        enabled: false
+      lead:
+        weight: 55
+        enabled: false
       liftup_with_image:
         weight: -27
+        enabled: false
+      link:
+        weight: 57
+        enabled: false
+      link_internal:
+        weight: 58
         enabled: false
       list_of_links:
         weight: -26
@@ -71,19 +99,40 @@ settings:
       list_of_links_item:
         weight: -25
         enabled: false
-      map:
-        weight: -24
+      mainheading:
+        weight: 61
+        enabled: false
+      news_list:
+        weight: 62
+        enabled: false
+      phone_number_box:
+        weight: 63
         enabled: false
       remote_video:
         weight: -23
         enabled: false
+      search:
+        weight: 65
+        enabled: false
+      service_list:
+        weight: 66
+        enabled: false
       sidebar_text:
         weight: -33
         enabled: true
+      subheading:
+        weight: 68
+        enabled: false
+      sujo_embedded:
+        weight: 69
+        enabled: false
       text:
         weight: -22
         enabled: false
       unit_search:
         weight: -21
+        enabled: false
+      video:
+        weight: 72
         enabled: false
 field_type: entity_reference_revisions
