--- a/conf/cmi/field.field.paragraph.accordion.field_accordion_design.yml
+++ b/conf/cmi/field.field.paragraph.accordion.field_accordion_design.yml
@@ -15,7 +15,7 @@ entity_type: paragraph
 bundle: accordion
 label: Design
 description: 'Choose the paragraph design from the dropdown.'
-required: true
+required: false
 translatable: false
 default_value:
   -
