--- a/conf/cmi/field.field.paragraph.accordion.field_accordion_heading_level.yml
+++ b/conf/cmi/field.field.paragraph.accordion.field_accordion_heading_level.yml
@@ -15,7 +15,7 @@ entity_type: paragraph
 bundle: accordion
 label: 'Items heading level'
 description: 'Select the heading level of the accordion so that they are semantically correct with the rest of the content.'
-required: true
+required: false
 translatable: false
 default_value:
   -
