Next and language settings basics.

--- a/conf/cmi/field.field.paragraph.highlighted_text.field_highlighted_text.yml
+++ b/conf/cmi/field.field.paragraph.highlighted_text.field_highlighted_text.yml
@@ -12,7 +12,7 @@ bundle: highlighted_text
 label: 'Highlighted text'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
