--- a/conf/cmi/field.field.paragraph.image.field_image_caption.yml
+++ b/conf/cmi/field.field.paragraph.image.field_image_caption.yml
@@ -14,7 +14,7 @@ bundle: image
 label: Caption
 description: 'You can provide a caption for the image here.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
