--- a/conf/cmi/field.field.paragraph.liftup_with_image.field_liftup_with_image_desc.yml
+++ b/conf/cmi/field.field.paragraph.liftup_with_image.field_liftup_with_image_desc.yml
@@ -16,7 +16,7 @@ bundle: liftup_with_image
 label: Description
 description: 'Optional short description for liftup block.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
