--- a/conf/cmi/field.field.paragraph.accordion.field_accordion_title.yml
+++ b/conf/cmi/field.field.paragraph.accordion.field_accordion_title.yml
@@ -14,7 +14,7 @@ bundle: accordion
 label: Title
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
