--- a/conf/cmi/field.field.paragraph.accordion_item.field_accordion_item_heading.yml
+++ b/conf/cmi/field.field.paragraph.accordion_item.field_accordion_item_heading.yml
@@ -14,7 +14,7 @@ bundle: accordion_item
 label: Heading
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
