--- a/conf/cmi/field.field.paragraph.hero.field_hero_desc.yml
+++ b/conf/cmi/field.field.paragraph.hero.field_hero_desc.yml
@@ -16,7 +16,7 @@ bundle: hero
 label: Description
 description: 'Optional short description for hero block.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
