--- a/conf/cmi/field.field.paragraph.hero.field_hero_title.yml
+++ b/conf/cmi/field.field.paragraph.hero.field_hero_title.yml
@@ -14,7 +14,7 @@ bundle: hero
 label: Title
 description: 'Title for the hero block. This will be used as the level 1 heading for the page instead of the regular page title if hero is added on the page.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
