--- a/conf/cmi/field.field.paragraph.image_and_card.field_ic_image.yml
+++ b/conf/cmi/field.field.paragraph.image_and_card.field_ic_image.yml
@@ -13,7 +13,7 @@ bundle: image_and_card
 label: Image
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
