--- a/conf/cmi/field.field.paragraph.card_list.field_card_list_is_koro.yml
+++ b/conf/cmi/field.field.paragraph.card_list.field_card_list_is_koro.yml
@@ -12,7 +12,7 @@ bundle: card_list
 label: 'Is koro present'
 description: 'Add koro waves at the beginning'
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
