--- a/conf/cmi/core.base_field_override.paragraph.card_list.status.yml
+++ b/conf/cmi/core.base_field_override.paragraph.card_list.status.yml
@@ -11,7 +11,7 @@ bundle: card_list
 label: Published
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 1
