--- a/conf/cmi/field.field.paragraph.content_cards.field_content_cards_content.yml
+++ b/conf/cmi/field.field.paragraph.content_cards.field_content_cards_content.yml
@@ -17,7 +17,7 @@ bundle: content_cards
 label: Content
 description: 'Add here the content that you want to appear as cards to the block.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
