--- a/conf/cmi/field.field.paragraph.content_cards.field_content_cards_title.yml
+++ b/conf/cmi/field.field.paragraph.content_cards.field_content_cards_title.yml
@@ -14,7 +14,7 @@ bundle: content_cards
 label: Title
 description: 'The title of the content cards paragraph.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
