--- a/conf/cmi/field.field.paragraph.text.field_text.yml
+++ b/conf/cmi/field.field.paragraph.text.field_text.yml
@@ -10,9 +10,8 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    basic_html: basic_html
-    restricted_html: '0'
-    plain_text: '0'
+    allowed_formats:
+      - basic_html
 _core:
   default_config_hash: 33OQFWbmHwOEoPJF6AnEACV3ZeulNSU3VpQABNvXEEs
 id: paragraph.text.field_text
