--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "drupal/helfi_tpr": "^2.0",
         "drupal/helfi_tunnistamo": "^1.0",
         "drupal/jsonapi_extras": "^3.20",
-        "drupal/jsonapi_image_styles": "^2.0@beta",
+        "drupal/jsonapi_image_styles": "^3.0",
         "drupal/jsonapi_menu_items": "^1.2",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
