--- a/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
@@ -13,48 +13,45 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
   module:
     - paragraphs
-    - paragraphs_features
     - text
 id: paragraph.accordion.default
 targetEntityType: paragraph
 bundle: accordion
 mode: default
 content:
-  field_accordion_description:
-    type: text_textarea
-    weight: 1
-    region: content
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
   field_accordion_design:
     type: options_select
-    weight: 2
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_accordion_heading_level:
     type: options_select
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_accordion_items:
     type: paragraphs
-    weight: 7
+    weight: 6
     region: content
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_accordion_text:
     type: text_textarea
-    weight: 5
+    weight: 4
     region: content
     settings:
       rows: 5
@@ -62,7 +59,7 @@ content:
     third_party_settings: {  }
   field_accordion_title:
     type: string_textfield
-    weight: 3
+    weight: 2
     region: content
     settings:
       size: 60
@@ -70,7 +67,7 @@ content:
     third_party_settings: {  }
   field_accordion_title_level:
     type: options_select
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -81,4 +78,5 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_accordion_description: true
   status: true
