--- a/conf/cmi/field.field.paragraph.accordion_item.field_accordion_item_content.yml
+++ b/conf/cmi/field.field.paragraph.accordion_item.field_accordion_item_content.yml
@@ -5,8 +5,6 @@ dependencies:
   config:
     - field.storage.paragraph.field_accordion_item_content
     - paragraphs.paragraphs_type.accordion_item
-    - paragraphs.paragraphs_type.columns
-    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.text
   module:
     - entity_reference_revisions
@@ -26,8 +24,6 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      columns: columns
-      image: image
       text: text
     negate: 0
     target_bundles_drag_drop:
@@ -40,14 +36,26 @@ settings:
       banner:
         weight: 23
         enabled: false
+      blog_list:
+        weight: 39
+        enabled: false
+      card:
+        weight: 40
+        enabled: false
+      card_list:
+        weight: 41
+        enabled: false
       columns:
         weight: 14
-        enabled: true
+        enabled: false
       content_cards:
         weight: 25
         enabled: false
       content_liftup:
         weight: 26
+        enabled: false
+      events_list:
+        weight: 45
         enabled: false
       from_library:
         weight: 27
@@ -61,11 +69,29 @@ settings:
       hero:
         weight: 17
         enabled: false
+      highlighted_text:
+        weight: 50
+        enabled: false
       image:
         weight: 18
-        enabled: true
+        enabled: false
+      image_and_card:
+        weight: 52
+        enabled: false
+      info:
+        weight: 53
+        enabled: false
+      lead:
+        weight: 54
+        enabled: false
       liftup_with_image:
         weight: 32
+        enabled: false
+      link:
+        weight: 56
+        enabled: false
+      link_internal:
+        weight: 57
         enabled: false
       list_of_links:
         weight: 20
@@ -73,11 +99,17 @@ settings:
       list_of_links_item:
         weight: 21
         enabled: false
-      map:
-        weight: 35
+      news_list:
+        weight: 60
+        enabled: false
+      phone_number_box:
+        weight: 61
         enabled: false
       remote_video:
         weight: 36
+        enabled: false
+      search:
+        weight: 63
         enabled: false
       service_list:
         weight: 37
@@ -85,10 +117,19 @@ settings:
       sidebar_text:
         weight: 38
         enabled: false
+      subheading:
+        weight: 66
+        enabled: false
+      sujo_embedded:
+        weight: 67
+        enabled: false
       text:
         weight: 22
         enabled: true
       unit_search:
         weight: 40
+        enabled: false
+      video:
+        weight: 70
         enabled: false
 field_type: entity_reference_revisions
