--- a/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.accordion.field_accordion_text
     - field.field.paragraph.accordion.field_accordion_title
     - field.field.paragraph.accordion.field_accordion_title_level
+    - field.field.paragraph.accordion.field_accordion_type
     - paragraphs.paragraphs_type.accordion
   module:
     - paragraphs
@@ -21,19 +22,19 @@ mode: default
 content:
   field_accordion_design:
     type: options_select
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_accordion_heading_level:
     type: options_select
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_accordion_items:
     type: paragraphs
-    weight: 6
+    weight: 7
     region: content
     settings:
       title: Paragraph
@@ -51,7 +52,7 @@ content:
     third_party_settings: {  }
   field_accordion_text:
     type: text_textarea
-    weight: 4
+    weight: 5
     region: content
     settings:
       rows: 5
@@ -59,7 +60,7 @@ content:
     third_party_settings: {  }
   field_accordion_title:
     type: string_textfield
-    weight: 2
+    weight: 3
     region: content
     settings:
       size: 60
@@ -67,7 +68,13 @@ content:
     third_party_settings: {  }
   field_accordion_title_level:
     type: options_select
-    weight: 3
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_accordion_type:
+    type: options_select
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
