--- a/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
@@ -20,15 +20,9 @@ targetEntityType: paragraph
 bundle: accordion
 mode: default
 content:
-  field_accordion_heading_level:
-    type: options_select
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_accordion_items:
     type: paragraphs
-    weight: 6
+    weight: 4
     region: content
     settings:
       title: Paragraph
@@ -46,7 +40,7 @@ content:
     third_party_settings: {  }
   field_accordion_text:
     type: text_textarea
-    weight: 4
+    weight: 3
     region: content
     settings:
       rows: 5
@@ -59,12 +53,6 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
-  field_accordion_title_level:
-    type: options_select
-    weight: 3
-    region: content
-    settings: {  }
     third_party_settings: {  }
   field_accordion_type:
     type: options_select
@@ -81,4 +69,6 @@ hidden:
   created: true
   field_accordion_description: true
   field_accordion_design: true
+  field_accordion_heading_level: true
+  field_accordion_title_level: true
   status: true
