THF-160: Add paragraph and landing page permissions for editor.

--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -11,6 +11,7 @@ dependencies:
     - media.type.video
     - node.type.blog
     - node.type.event
+    - node.type.landing_page
     - node.type.news
     - node.type.page
   module:
@@ -77,29 +78,45 @@ permissions:
   - 'create document media'
   - 'create event content'
   - 'create image media'
+  - 'create landing_page content'
   - 'create media'
   - 'create news content'
   - 'create page content'
   - 'create paragraph content accordion'
+  - 'create paragraph content accordion_item'
+  - 'create paragraph content banner'
   - 'create paragraph content blog_list'
   - 'create paragraph content card'
   - 'create paragraph content card_list'
+  - 'create paragraph content columns'
+  - 'create paragraph content content_cards'
+  - 'create paragraph content content_liftup'
   - 'create paragraph content events_list'
+  - 'create paragraph content from_library'
+  - 'create paragraph content gallery'
+  - 'create paragraph content gallery_slide'
   - 'create paragraph content hero'
   - 'create paragraph content highlighted_text'
   - 'create paragraph content image'
   - 'create paragraph content image_and_card'
   - 'create paragraph content info'
   - 'create paragraph content lead'
+  - 'create paragraph content liftup_with_image'
   - 'create paragraph content link'
   - 'create paragraph content link_internal'
+  - 'create paragraph content list_of_links'
+  - 'create paragraph content list_of_links_item'
   - 'create paragraph content mainheading'
   - 'create paragraph content news_list'
   - 'create paragraph content phone_number_box'
+  - 'create paragraph content remote_video'
   - 'create paragraph content search'
+  - 'create paragraph content service_list'
+  - 'create paragraph content sidebar_text'
   - 'create paragraph content subheading'
   - 'create paragraph content sujo_embedded'
   - 'create paragraph content text'
+  - 'create paragraph content unit_search'
   - 'create paragraph content video'
   - 'create remote_video media'
   - 'create url aliases'
@@ -110,6 +127,7 @@ permissions:
   - 'delete any document media'
   - 'delete any event content'
   - 'delete any image media'
+  - 'delete any landing_page content'
   - 'delete any media'
   - 'delete any news content'
   - 'delete any page content'
@@ -117,6 +135,7 @@ permissions:
   - 'delete any video media'
   - 'delete blog revisions'
   - 'delete content translations'
+  - 'delete landing_page revisions'
   - 'delete media'
   - 'delete news revisions'
   - 'delete own audio media'
@@ -124,37 +143,54 @@ permissions:
   - 'delete own document media'
   - 'delete own event content'
   - 'delete own image media'
+  - 'delete own landing_page content'
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own remote_video media'
   - 'delete own video media'
   - 'delete page revisions'
   - 'delete paragraph content accordion'
+  - 'delete paragraph content accordion_item'
+  - 'delete paragraph content banner'
   - 'delete paragraph content blog_list'
   - 'delete paragraph content card'
   - 'delete paragraph content card_list'
+  - 'delete paragraph content columns'
+  - 'delete paragraph content content_cards'
+  - 'delete paragraph content content_liftup'
   - 'delete paragraph content events_list'
+  - 'delete paragraph content from_library'
+  - 'delete paragraph content gallery'
+  - 'delete paragraph content gallery_slide'
   - 'delete paragraph content hero'
   - 'delete paragraph content highlighted_text'
   - 'delete paragraph content image'
   - 'delete paragraph content image_and_card'
   - 'delete paragraph content info'
   - 'delete paragraph content lead'
+  - 'delete paragraph content liftup_with_image'
   - 'delete paragraph content link'
   - 'delete paragraph content link_internal'
+  - 'delete paragraph content list_of_links'
+  - 'delete paragraph content list_of_links_item'
   - 'delete paragraph content mainheading'
   - 'delete paragraph content news_list'
   - 'delete paragraph content phone_number_box'
+  - 'delete paragraph content remote_video'
   - 'delete paragraph content search'
+  - 'delete paragraph content service_list'
+  - 'delete paragraph content sidebar_text'
   - 'delete paragraph content subheading'
   - 'delete paragraph content sujo_embedded'
   - 'delete paragraph content text'
+  - 'delete paragraph content unit_search'
   - 'delete paragraph content video'
   - 'edit any audio media'
   - 'edit any blog content'
   - 'edit any document media'
   - 'edit any event content'
   - 'edit any image media'
+  - 'edit any landing_page content'
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any remote_video media'
@@ -164,6 +200,7 @@ permissions:
   - 'edit own document media'
   - 'edit own event content'
   - 'edit own image media'
+  - 'edit own landing_page content'
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own remote_video media'
@@ -174,12 +211,14 @@ permissions:
   - 'revert all revisions'
   - 'revert blog revisions'
   - 'revert event revisions'
+  - 'revert landing_page revisions'
   - 'revert news revisions'
   - 'revert page revisions'
   - 'search content'
   - 'skip comment approval'
   - 'translate any entity'
   - 'translate blog node'
+  - 'translate landing_page node'
   - 'translate news node'
   - 'translate page node'
   - 'translate paragraph'
@@ -187,25 +226,40 @@ permissions:
   - 'update content translations'
   - 'update media'
   - 'update paragraph content accordion'
+  - 'update paragraph content accordion_item'
+  - 'update paragraph content banner'
   - 'update paragraph content blog_list'
   - 'update paragraph content card'
   - 'update paragraph content card_list'
+  - 'update paragraph content columns'
+  - 'update paragraph content content_cards'
+  - 'update paragraph content content_liftup'
   - 'update paragraph content events_list'
+  - 'update paragraph content from_library'
+  - 'update paragraph content gallery'
+  - 'update paragraph content gallery_slide'
   - 'update paragraph content hero'
   - 'update paragraph content highlighted_text'
   - 'update paragraph content image'
   - 'update paragraph content image_and_card'
   - 'update paragraph content info'
   - 'update paragraph content lead'
+  - 'update paragraph content liftup_with_image'
   - 'update paragraph content link'
   - 'update paragraph content link_internal'
+  - 'update paragraph content list_of_links'
+  - 'update paragraph content list_of_links_item'
   - 'update paragraph content mainheading'
   - 'update paragraph content news_list'
   - 'update paragraph content phone_number_box'
+  - 'update paragraph content remote_video'
   - 'update paragraph content search'
+  - 'update paragraph content service_list'
+  - 'update paragraph content sidebar_text'
   - 'update paragraph content subheading'
   - 'update paragraph content sujo_embedded'
   - 'update paragraph content text'
+  - 'update paragraph content unit_search'
   - 'update paragraph content video'
   - 'use advanced search'
   - 'use text format basic_html'
@@ -213,6 +267,7 @@ permissions:
   - 'view all revisions'
   - 'view blog revisions'
   - 'view event revisions'
+  - 'view landing_page revisions'
   - 'view media'
   - 'view media'
   - 'view news revisions'
@@ -220,25 +275,40 @@ permissions:
   - 'view own unpublished media'
   - 'view page revisions'
   - 'view paragraph content accordion'
+  - 'view paragraph content accordion_item'
+  - 'view paragraph content banner'
   - 'view paragraph content blog_list'
   - 'view paragraph content card'
   - 'view paragraph content card_list'
+  - 'view paragraph content columns'
+  - 'view paragraph content content_cards'
+  - 'view paragraph content content_liftup'
   - 'view paragraph content events_list'
+  - 'view paragraph content from_library'
+  - 'view paragraph content gallery'
+  - 'view paragraph content gallery_slide'
   - 'view paragraph content hero'
   - 'view paragraph content highlighted_text'
   - 'view paragraph content image'
   - 'view paragraph content image_and_card'
   - 'view paragraph content info'
   - 'view paragraph content lead'
+  - 'view paragraph content liftup_with_image'
   - 'view paragraph content link'
   - 'view paragraph content link_internal'
+  - 'view paragraph content list_of_links'
+  - 'view paragraph content list_of_links_item'
   - 'view paragraph content mainheading'
   - 'view paragraph content news_list'
   - 'view paragraph content phone_number_box'
+  - 'view paragraph content remote_video'
   - 'view paragraph content search'
+  - 'view paragraph content service_list'
+  - 'view paragraph content sidebar_text'
   - 'view paragraph content subheading'
   - 'view paragraph content sujo_embedded'
   - 'view paragraph content text'
+  - 'view paragraph content unit_search'
   - 'view paragraph content video'
   - 'view the administration theme'
   - 'view tpr_service'
