--- a/conf/cmi/core.entity_form_display.paragraph.subheading.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.subheading.default.yml
@@ -19,17 +19,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_title_color:
-    type: options_select
-    weight: 11
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
+  field_title_color: true
   status: true
